# AI-Travel-Planner

./: .env.example  .gitignore  CLAUDE.md  DOCKER_DEPLOYMENT.md  README.md  TODO.md  docker-compose.yml  pyproject.toml  start.bat  start.sh  开发方案.md
backend/: .dockerignore  Dockerfile  requirements.txt  run.py  supabase_schema.sql  test_ai_improved.py  test_auth_api.py  test_map_debug.py  test_supabase.py  test_voice_api.py  test_voice_transcribe.py
backend/app/: __init__.py  auth.py  config.py  routes.py  supabase_client.py
backend/app/services/: __init__.py  ai_expense_analyzer.py  ai_service.py  expense_service.py  map_service.py  voice_service.py
backend/database/migrations/: add_expense_fields.sql  create_expenses_table.sql  run_migration.py
docs/: ADVANCED_EDIT_FEATURE.md  ADVANCED_EDIT_QUICK_START.md  AUTH_COMPLETE_SUMMARY.md  BACKEND_AUTH_API.md  CLOUD_SAVE_EDIT_FEATURE.md  COMPLETE_ITINERARY_MANAGEMENT_FIX.md  DUAL_TIMELINE_LAYOUT.md  FRONTEND_AUTH_INTEGRATION.md  HORIZONTAL_TIMELINE_FEATURE.md  ITINERARY_EDIT_FIX_SUMMARY.md  ITINERARY_EDIT_SAVE_TEST_GUIDE.md  SUPABASE_AUTO_CONFIRM_GUIDE.md  SUPABASE_QUICKSTART.md  SUPABASE_SETUP.md  VIEW_DETAILS_FIX_SUMMARY.md  supabase_auto_confirm_trigger.sql  supabase_init.sql
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.build.json  vite.config.ts
frontend/public/: test.html
frontend/src/: App.tsx
frontend/src/components/: AIBudgetAnalysis.tsx  AppHeader.scss  AppHeader.tsx  ExpenseForm.tsx  ExpenseTracker.tsx  (+8 more)
prepare/: 大模型.py  语音识别.py  高德.py
(+22 files in other folders)
