[project]
name = "ai-travel-planner"
version = "0.1.0"
description = "AI Travel Planner(Web)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "flask-cors>=5.0.0",
    "httpx[socks]>=0.28.1",
    "langchain>=1.0.3",
    "langchain-openai>=1.0.2",
    "loguru>=0.7.3",
    "pre-commit>=4.3.0",
    "pyaudio>=0.2.14",
    "pydub>=0.25.1",
    "python-dotenv>=1.0.0",
    "speechrecognition>=3.14.3",
    "supabase>=2.10.0",
    "typer>=0.20.0",
    "typos>=1.39.0",
]


[tool.ruff]
target-version = "py314"
fix = true

[tool.ruff.lint]
extend-select = ["I"]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
